# HumanDetection4Tasker

./: .gitignore  CLAUDE.md  How to create API keys for Google and Claude.md  ON_DEVICE_AI.md  README.md  build.gradle  settings.gradle
.claude/: settings.local.json
app/: build.gradle
app/src/androidTest/java/online/avogadro/aws4tasker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llamacpp_jni.cpp
app/src/main/java/online/avogadro/opencv4tasker/: ConfigActivity.java  MainActivity.java  SplashActivity.java
app/src/main/java/online/avogadro/opencv4tasker/ai/: AIImageAnalyzer.java
app/src/main/java/online/avogadro/opencv4tasker/app/: SharedPreferencesHelper.java  Util.java
app/src/main/java/online/avogadro/opencv4tasker/claudeai/: HumansDetectorClaudeAI.java
app/src/main/java/online/avogadro/opencv4tasker/gemini/: HumansDetectorGemini.java
app/src/main/java/online/avogadro/opencv4tasker/gemma3n/: HumansDetectorGemma3n.kt
app/src/main/java/online/avogadro/opencv4tasker/llamacpp/: HumansDetectorLlamaCpp.kt  LlamaCppEngine.kt  LlamaCppModelCatalog.kt  (+1 more)
app/src/main/res/layout/: activity_config.xml  activity_config_analyze_image.xml  activity_config_cancel_notification.xml  activity_config_detect_humans.xml  activity_config_notification_intercepted_event.xml  activity_main.xml  activity_splash.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ai_image_analyzer.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
